Closed
Bug 1379912
Opened 8 years ago
Closed 8 years ago
Disposition flag ("replied"/"forwarded") lost if reply/forwarded message was stored as draft, draft was later edited and sent
Categories
(Thunderbird :: Folder and Message Lists, defect)
Tracking
(thunderbird_esr5255+ fixed, thunderbird55 wontfix, thunderbird56 fixed)
RESOLVED
FIXED
Thunderbird 56.0
People
(Reporter: christian, Assigned: jorgk-bmo)
References
Details
(Keywords: dataloss, regression)
Attachments
(1 file, 1 obsolete file)
6.47 KB,
patch
|
jorgk-bmo
:
review+
jorgk-bmo
:
approval-comm-esr52+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:54.0) Gecko/20100101 Firefox/54.0
Build ID: 20170628075643
Steps to reproduce:
An email account in IMAP mode (tested with two different providers)
Click answer on an email
save your answer in the draft
close your answer
open you answer
send your answer
Actual results:
With this procedure there is no flag arrow to to indicate that the receveid message has been answered
Same problem with email transfert
Expected results:
The original (the receiveid) message shoud have a flag arrow to indicate that answer has been send
Assignee | ||
Comment 1•8 years ago
|
||
I can confirm this issue in TB 56 Daily, most likely also broken in TB 52. Still working in TB 45.
Alice, can you find the regression for us. Thank you in advance.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(alice0775)
Keywords: regression
Summary: no arrow for answer if the answer go trow the draft folder → no arrow for answer if the answer was stored in draft folder, draft was later edited and sent
![]() |
||
Comment 2•8 years ago
|
||
Last Good:http://archive.mozilla.org/pub/thunderbird/tinderbox-builds/comm-central-win32/1483010197/
First Bad:http://archive.mozilla.org/pub/thunderbird/tinderbox-builds/comm-central-win32/1483016136/
Regression window:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=fe26a515410f4bf4e500c7638e735a9f1bb79a2b&tochange=f63a0b7059c7e99e7a3435d22a0d0cb9fa35857f
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=143bb4b9249e528e658f6ccc449991794b8675f8&tochange=143bb4b9249e528e658f6ccc449991794b8675f8
Flags: needinfo?(alice0775)
Assignee | ||
Comment 3•8 years ago
|
||
Thank to so much Alice!!
This is the change I made for bug 1322103:
https://hg.mozilla.org/comm-central/rev/f63a0b7059c7e99e7a3435d22a0d0cb9fa35857f
Assignee | ||
Comment 4•8 years ago
|
||
Typo: Thank *you* so much, Alice!!
Assignee | ||
Comment 5•8 years ago
|
||
Hi Magnus. In bug 1322103 we both messed up with:
https://hg.mozilla.org/comm-central/rev/f63a0b7059c7e99e7a3435d22a0d0cb9fa35857f#l2.12
The original URI *must* be retrieved from the database, otherwise the original message is not marked as replied if we store and then edit a draft first.
So after backing this out, I found a much simpler solution to the problem of bug 1322103. We just grab a copy of the correct original URI before it gets mangled as described.
Assignee: nobody → jorgk
Status: NEW → ASSIGNED
Attachment #8886822 -
Flags: review?(mkmelin+mozilla)
Assignee | ||
Updated•8 years ago
|
Severity: normal → major
Keywords: dataloss
Summary: no arrow for answer if the answer was stored in draft folder, draft was later edited and sent → Disposition flag ("replied"/"forwarded") lost if reply/forwarded message was stored as draft, draft was later edited and sent
Assignee | ||
Comment 6•8 years ago
|
||
Comment on attachment 8886822 [details] [diff] [review]
1379912-mark-replied.patch (v1)
Frank-Rainer, I'm sure you could convince yourself in bug 1322172, attachment 8886881 [details] [diff] [review], that what I'm proposing for MsgComposeCommands.js works. Reverting the incorrect change from bug 1322103 in nsMsgCompose.cpp is obvious.
Attachment #8886822 -
Flags: review?(frgrahl)
![]() |
||
Comment 7•8 years ago
|
||
Comment on attachment 8886822 [details] [diff] [review]
1379912-mark-replied.patch (v1)
Test with today's Daily. Error was clearly reproducible.
With the fix everything worked and the original message got marked. Also tested a few edge cases like deleting the message before reply. No errors found and code looks good. r+
Attachment #8886822 -
Flags: review?(frgrahl) → review+
Assignee | ||
Updated•8 years ago
|
Attachment #8886822 -
Flags: review?(mkmelin+mozilla)
Assignee | ||
Comment 8•8 years ago
|
||
Tweaked a comment and found more spots where gOriginalMsgURI needs to be used.
Attachment #8886822 -
Attachment is obsolete: true
Attachment #8887179 -
Flags: review+
Assignee | ||
Comment 9•8 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-thunderbird55:
--- → affected
status-thunderbird_esr52:
--- → affected
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 56.0
Assignee | ||
Comment 10•8 years ago
|
||
Comment on attachment 8887179 [details] [diff] [review]
1379912-mark-replied.patch (v2)
This certainly needs uplift. I don't think we're doing another TB 55 beta though.
Attachment #8887179 -
Flags: approval-comm-esr52+
Attachment #8887179 -
Flags: approval-comm-beta+
![]() |
||
Comment 11•8 years ago
|
||
> Tweaked a comment and found more spots where gOriginalMsgURI needs to be used.
Sorry should have mentioned it. Thought it was intentional here.
Assignee | ||
Comment 12•8 years ago
|
||
Comment on attachment 8887179 [details] [diff] [review]
1379912-mark-replied.patch (v2)
Not doing another TB 55 beta.
Attachment #8887179 -
Flags: approval-comm-beta+
Assignee | ||
Comment 13•8 years ago
|
||
Assignee | ||
Updated•8 years ago
|
tracking-thunderbird_esr52:
--- → 55+
Assignee | ||
Updated•8 years ago
|
status-thunderbird56:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•