Bug 1379912 - Back out bug 1322103 and fix it differently. Solves original not marked as replied/forwarded. r=frg